@@ -177,7 +177,8 @@ SANITY_UNSUPPORTED=	USE_OPENAL USE_FAM USE_MAKESELF USE_ZIP USE_LHA USE_CMAKE \
 		PYDISTUTILS_AUTOPLIST PYTHON_PY3K_PLIST_HACK PYDISTUTILS_NOEGGINFO \
 		USE_PYTHON_PREFIX USE_BZIP2 USE_XZ USE_PGSQL NEED_ROOT \
 		UNIQUENAME LATEST_LINK USE_SQLITE USE_FIREBIRD
-SANITY_DEPRECATED=	PYTHON_PKGNAMESUFFIX USE_AUTOTOOLS PLIST_DIRSTRY USE_BDB USE_MYSQL WANT_MYSQL_VER
+SANITY_DEPRECATED=	PYTHON_PKGNAMESUFFIX USE_AUTOTOOLS PLIST_DIRSTRY \
+			USE_BDB USE_MYSQL WANT_MYSQL_VER USE_OPENSSL
 SANITY_NOTNEEDED=	WX_UNICODE
 
 USE_AUTOTOOLS_ALT=	USES=autoreconf and GNU_CONFIGURE=yes
@@ -221,6 +222,7 @@ USE_FIREBIRD_ALT=	USES=firebird
 USE_BDB_ALT=		USES=bdb:${USE_BDB}
 USE_MYSQL_ALT=		USES=mysql:${USE_MYSQL}
 WANT_MYSQL_VER_ALT=	USES=mysql:${WANT_MYSQL_VER}
+USE_OPENSSL_ALT=	USES=ssl
 
 .for a in ${SANITY_DEPRECATED}
 .if defined(${a})
